Add control style for CheckBox

--- a/SidCatUI/SidCatUI/MainWindow.xaml
+++ b/SidCatUI/SidCatUI/MainWindow.xaml
@@ -83,6 +83,11 @@
                 </Setter.Value>
             </Setter>
         </Style>
+        <Style TargetType="CheckBox">
+            <Setter Property="Margin" Value="4"/>
+            <Setter Property="HorizontalAlignment" Value="Left"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+        </Style>
         <Style TargetType="TextBox">
             <Setter Property="Margin" Value="4"/>
             <Setter Property="Background">
@@ -119,16 +124,15 @@
             <Label Grid.Column="0" Grid.Row="0"  
                    ToolTip="Här lagras samtliga betalningsmedel som kan användas vid betalning i TACDIS Cash. Vid betalningen visas samtliga registrerade betalningsmedel i en listruta. ">Betalnr:</Label>
             <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Horizontal">
-                <TextBox x:Name="tbPaymentMethodNum" Grid.Column="1" Template="{StaticResource MyInputFieldTemplate}" HorizontalAlignment="Left" Height="22" TextWrapping="NoWrap" VerticalAlignment="Center" Width="30" BorderThickness="3"
+                <TextBox x:Name="tbPaymentMethodNum" Grid.Column="1" Template="{StaticResource MyInputFieldTemplate}" Height="22" TextWrapping="NoWrap" Width="30" BorderThickness="3"
                          ToolTip="Betalningssättnummer 1 - 99. Betalnummer 1 är alltid kontant."/>
-                <CheckBox HorizontalAlignment="Center" VerticalAlignment="Center" Margin="4" ToolTip="Betalningssättet får ej användas vid betalning.">Spärrat</CheckBox>
+                <CheckBox ToolTip="Betalningssättet får ej användas vid betalning.">Spärrat</CheckBox>
             </StackPanel>
             <Button x:Name="btnPrevious" Grid.Column="2" Grid.Row="0" Template="{StaticResource MyButtonTemplate}" Content="PgUp=Föregående" ToolTip="Bläddrar till föregående post."/>
 
             <Label Grid.Column="0" Grid.Row="1">Benämning:</Label>
             <StackPanel Grid.Column="1" Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Stretch">
-                <TextBox x:Name="tbDescription" HorizontalAlignment="Left" Height="22" Width="200" BorderThickness="3" VerticalAlignment="Center"
-                         ToolTip="Betalsättsbenämning, max 15 tecken"/>
+                <TextBox x:Name="tbDescription" Height="22" Width="200" BorderThickness="3" ToolTip="Betalsättsbenämning, max 15 tecken"/>
             </StackPanel>
             <Button x:Name="btnNext" Grid.Column="2" Grid.Row="1" Template="{StaticResource MyButtonTemplate}" ToolTip="Bläddrar till nästa post.">PgDn=Nästa</Button>
 
@@ -146,39 +150,39 @@
             <Label Grid.Column="0" Grid.Row="3" >Kontonr:</Label>
             <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="2" >
                 <StackPanel Orientation="Vertical" Width="90" >
-                    <Label HorizontalAlignment="Left">Baskonto:</Label>
+                    <Label >Baskonto:</Label>
                     <TextBox ToolTip="Debetkonto för betalningsmedlet (max 6 tecken)">2331K</TextBox>
                 </StackPanel>
                 <StackPanel Orientation="Vertical" Width="100" >
-                    <Label HorizontalAlignment="Left">Konstnadsställe:</Label>
+                    <Label >Konstnadsställe:</Label>
                     <TextBox ToolTip="Debetkonto för betalningsmedlet (max 6 tecken)"></TextBox>
                 </StackPanel>
                 <StackPanel Orientation="Vertical" Width="90" >
-                    <Label HorizontalAlignment="Left">Produkt:</Label>
+                    <Label >Produkt:</Label>
                     <TextBox ToolTip="Debetkonto för betalningsmedlet (max 6 tecken)"></TextBox>
                 </StackPanel>
                 <StackPanel Orientation="Vertical" Width="90" >
-                    <Label HorizontalAlignment="Left">Projekt:</Label>
+                    <Label >Projekt:</Label>
                     <TextBox ToolTip="Debetkonto för betalningsmedlet (max 6 tecken)"></TextBox>
                 </StackPanel>
             </StackPanel>
 
             <Label Grid.Column="0" Grid.Row="4" >Delat betalningssätt:</Label>
-            <CheckBox x:Name="cbSplitPaymentAllowed" Grid.Column="1" Grid.Row="4" VerticalAlignment="Center" Margin="4" HorizontalAlignment="Left"
+            <CheckBox x:Name="cbSplitPaymentAllowed" Grid.Column="1" Grid.Row="4" 
                       ToolTip="Delat betalningssätt tillåtet för detta betalningsmedel. (Motsats: Hela köpbeloppet måste betalas med detta betalningsmedel.) Aktiveras normalt för samtliga utom smitning."/>
 
             <Label Grid.Column="0" Grid.Row="5" >Referens:</Label>
-            <CheckBox x:Name="cbReferenceRequired" Grid.Column="1" Grid.Row="5" VerticalAlignment="Center" Margin="4" HorizontalAlignment="Left"
+            <CheckBox x:Name="cbReferenceRequired" Grid.Column="1" Grid.Row="5" 
                       ToolTip="Referens måste anges i betalningfönstret med detta betalningsmedel. (Motsats: Referensnummer krävs inte, går inte heller att ange.)"/>
             <Button Grid.Column="2" Grid.Row="5" Template="{StaticResource MyButtonTemplate}" ToolTip="Utskrift på rapportskrivare.">F5=Utskrift</Button>
 
             <Label Grid.Column="0" Grid.Row="6" >Kassalåda:</Label>
-            <CheckBox x:Name="cbCashBox" Grid.Column="1" Grid.Row="6" VerticalAlignment="Center" Margin="4" HorizontalAlignment="Left" 
+            <CheckBox x:Name="cbCashBox" Grid.Column="1" Grid.Row="6"  
                       ToolTip="Ansluten kassalåda öppnas efter det att hela köpbeloppet betalats. (Motsats: Kassalådan öppnas inte. Kan dock öppnas manuellt.) Aktiveras normalt för alla betalningsmedel utom Firmakort."/>
             <Button x:Name="btnHistory" Grid.Column="2" Grid.Row="6" Template="{StaticResource MyButtonTemplate}" ToolTip="Visar historik över utförda ändringar.">F7=Historik</Button>
 
             <Label Grid.Column="0" Grid.Row="7" >Kassarapport:</Label>
-            <CheckBox x:Name="cbCashReport" Grid.Column="1" Grid.Row="7" VerticalAlignment="Center" Margin="4" HorizontalAlignment="Left"
+            <CheckBox x:Name="cbCashReport" Grid.Column="1" Grid.Row="7" 
                       ToolTip="Betalning skall summeras under Redovisat belopp på kassarapport, t ex kontant och kuponger."/>
 
             <Button x:Name="btnEscape" Grid.Column="0" Grid.Row="8" Template="{StaticResource MyButtonTemplate}" ToolTip="Stänger fönstret. Om osparat data ställs en kontrollfråga.">Esc=Stäng</Button>
