--- a/SidCatUI/SidCatUI/MainWindow.xaml
+++ b/SidCatUI/SidCatUI/MainWindow.xaml
@@ -8,20 +8,10 @@
         Title="SidCat PoC Betalningsmedel" 
         Height="360" MinHeight="360"
         Width="525" MinWidth="525"
+        WindowStartupLocation="CenterScreen"
         Background="Azure">
     <Window.Resources>
         <!--TEMPLATES-->
-        <ControlTemplate x:Key="MyInputFieldTemplate" TargetType="{x:Type TextBox}">
-            <Border x:Name="border" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" SnapsToDevicePixels="True">
-            </Border>
-            <ControlTemplate.Triggers>
-                <Trigger Property="IsFocused" Value="true">
-                    <Setter Property="BorderBrush" Value="Green"/>
-                    <Setter Property="BorderThickness" Value="3"/>
-                </Trigger>
-            </ControlTemplate.Triggers>
-        </ControlTemplate>
-        
         <ControlTemplate x:Key="MyButtonTemplate" TargetType="{x:Type Button}">
             <Grid>
                 <Border x:Name="thisborder" CornerRadius="2" BorderBrush="{TemplateBinding BorderBrush}" Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}"/>
@@ -82,22 +72,31 @@
                     <SolidColorBrush Color="DarkBlue"/>
                 </Setter.Value>
             </Setter>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
         </Style>
         <Style TargetType="CheckBox">
             <Setter Property="Margin" Value="4"/>
             <Setter Property="HorizontalAlignment" Value="Left"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
         </Style>
-        <Style TargetType="TextBox">
+        
+        <Style TargetType="{x:Type TextBox}" xmlns:behaviours="clr-namespace:SidCatUI">
             <Setter Property="Margin" Value="4"/>
-            <Setter Property="Background">
-                <Setter.Value>
-                    <SolidColorBrush Color="LightYellow"/>
-                </Setter.Value>
-            </Setter>
-        </Style>
-        <Style TargetType="StackPanel">
-            <Setter Property="Margin" Value="4"/>
+            <Setter Property="HorizontalAlignment" Value="Stretch"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="BorderThickness" Value="3"/>
+            <Style.Triggers>
+                <Trigger Property="IsKeyboardFocusWithin" Value="True">
+                    <Setter Property="Background" Value="Yellow"/>
+                    <Setter Property="behaviours:TextBoxBehaviour.SelectAll" Value="True"/>
+                </Trigger>
+            </Style.Triggers>
         </Style>
     </Window.Resources>
     
@@ -124,16 +123,14 @@
             <Label Grid.Column="0" Grid.Row="0"  
                    ToolTip="Här lagras samtliga betalningsmedel som kan användas vid betalning i TACDIS Cash. Vid betalningen visas samtliga registrerade betalningsmedel i en listruta. ">Betalnr:</Label>
             <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Horizontal">
-                <TextBox x:Name="tbPaymentMethodNum" Grid.Column="1" Template="{StaticResource MyInputFieldTemplate}" Height="22" TextWrapping="NoWrap" Width="30" BorderThickness="3"
+                <TextBox x:Name="tbPaymentMethodNum" Grid.Column="1" Width="30" 
                          ToolTip="Betalningssättnummer 1 - 99. Betalnummer 1 är alltid kontant."/>
                 <CheckBox ToolTip="Betalningssättet får ej användas vid betalning.">Spärrat</CheckBox>
             </StackPanel>
             <Button x:Name="btnPrevious" Grid.Column="2" Grid.Row="0" Template="{StaticResource MyButtonTemplate}" Content="PgUp=Föregående" ToolTip="Bläddrar till föregående post."/>
 
             <Label Grid.Column="0" Grid.Row="1">Benämning:</Label>
-            <StackPanel Grid.Column="1" Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Stretch">
-                <TextBox x:Name="tbDescription" Height="22" Width="200" BorderThickness="3" ToolTip="Betalsättsbenämning, max 15 tecken"/>
-            </StackPanel>
+            <TextBox x:Name="tbDescription" Grid.Column="1" Grid.Row="1" ToolTip="Betalsättsbenämning, max 15 tecken"/>
             <Button x:Name="btnNext" Grid.Column="2" Grid.Row="1" Template="{StaticResource MyButtonTemplate}" ToolTip="Bläddrar till nästa post.">PgDn=Nästa</Button>
 
             <Label Grid.Column="0" Grid.Row="2" >Funktion:</Label>
@@ -150,19 +147,19 @@
             <Label Grid.Column="0" Grid.Row="3" >Kontonr:</Label>
             <StackPanel Orientation="Horizontal" Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="2" >
                 <StackPanel Orientation="Vertical" Width="90" >
-                    <Label >Baskonto:</Label>
+                    <Label Margin="1">Baskonto:</Label>
                     <TextBox ToolTip="Debetkonto för betalningsmedlet (max 6 tecken)">2331K</TextBox>
                 </StackPanel>
                 <StackPanel Orientation="Vertical" Width="100" >
-                    <Label >Konstnadsställe:</Label>
+                    <Label Margin="1">Konstnadsställe:</Label>
                     <TextBox ToolTip="Debetkonto för betalningsmedlet (max 6 tecken)"></TextBox>
                 </StackPanel>
                 <StackPanel Orientation="Vertical" Width="90" >
-                    <Label >Produkt:</Label>
+                    <Label Margin="1">Produkt:</Label>
                     <TextBox ToolTip="Debetkonto för betalningsmedlet (max 6 tecken)"></TextBox>
                 </StackPanel>
                 <StackPanel Orientation="Vertical" Width="90" >
-                    <Label >Projekt:</Label>
+                    <Label Margin="1">Projekt:</Label>
                     <TextBox ToolTip="Debetkonto för betalningsmedlet (max 6 tecken)"></TextBox>
                 </StackPanel>
             </StackPanel>
